# prometheus-rust

./: Cargo.toml  Makefile  README.md
api/: Cargo.toml  Rocket.toml
api/src/: main.rs  routes.rs
api/src/controllers/jobs/: mod.rs
api/src/e2e/: mod.rs  tests.rs
api/src/e2e/jobs/: tests.rs
api/src/jobs/: controller.rs  mod.rs  models.rs  routes.rs  service.rs
app/: Cargo.toml
