[package]
name = "api"
version = "0.1.0"
authors = ["Ahmad <ahmad2smile@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api"
path = "api/src/main.rs"

[[bin]]
name = "app"
path = "app/src/main.rs"


[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }
reqwest = { version = "0.10.1", features = ["blocking", "json"] }